# serializer version: 1
# name: test_convert_ball_position
  '''
  position {
    x: 4.6
    y: 2.8
    z: 2.9
  }
  velocity {
    x: 1.1
    y: 0.2
    z: 0.3
  }
  covariance {
    x {
      x: 1.0
      y: 2.0
      z: 3.0
    }
    y {
      x: 4.0
      y: 5.0
      z: 6.0
    }
    z {
      x: 7.0
      y: 8.0
      z: 9.0
    }
  }
  
  '''
# ---
# name: test_convert_current_pose
  '''
  x: 3.6
  y: 1.8
  z: 1.2167989
  
  '''
# ---
# name: test_convert_current_pose.1
  '''
  x {
    x: 1.0
    y: 2.0
    z: 3.0
  }
  y {
    x: 4.0
    y: 5.0
    z: 6.0
  }
  z {
    x: 7.0
    y: 8.0
    z: 9.0
  }
  
  '''
# ---
# name: test_convert_empty_state
  '''
  current_pose {
    player_id: 2
    covariance {
      x {
        x: 100.0
      }
      y {
        y: 100.0
      }
      z {
        z: 100.0
      }
    }
    team: BLUE
  }
  ball {
    covariance {
      x {
        x: 100.0
      }
      y {
        y: 100.0
      }
      z {
        z: 100.0
      }
    }
  }
  time_to_ball: 9999.0
  
  '''
# ---
# name: test_convert_seen_robots
  '''
  [player_id: 2
  position {
    x: 3.6
    y: 1.8
    z: 1.2167989
  }
  team: BLUE
  , player_id: 3
  position {
    x: 3.6
    y: 1.8
    z: 1.2167989
  }
  team: RED
  , player_id: 4
  position {
    x: 3.6
    y: 1.8
    z: 1.2167989
  }
  ]
  '''
# ---
# name: test_convert_seen_robots.1
  list([
    0.800000011920929,
    0.800000011920929,
    0.800000011920929,
  ])
# ---
# name: test_convert_target_pose
  '''
  position {
    x: 2.6
    y: 0.8
    z: 1.2167989
  }
  
  '''
# ---
# name: test_convert_time_to_ball_calculated
  1.2856487035751343
# ---
